crates/courier-ftp-proto/tests/snapshots/golden__account_delete_request.snap
---
source: crates/courier-ftp-proto/tests/golden.rs
expression: json
---
{
  "reauth_token": "reauth"
}
