crates/courier-ftp-proto/tests/snapshots/golden__audit_query.snap
---
source: crates/courier-ftp-proto/tests/golden.rs
expression: json
---
{
  "before": 100,
  "limit": 50
}
