crates/courier-ftp-proto/tests/snapshots/golden__create_invite_request.snap
---
source: crates/courier-ftp-proto/tests/golden.rs
expression: json
---
{
  "email": "carol@example.test",
  "role": "member"
}
