crates/courier-ftp-proto/tests/snapshots/golden__error_conflict.snap
---
source: crates/courier-ftp-proto/tests/golden.rs
expression: json
---
{
  "error": {
    "code": "conflict",
    "message": "vault exists"
  }
}
