crates/courier-ftp-proto/tests/snapshots/golden__error_rate_limited.snap
---
source: crates/courier-ftp-proto/tests/golden.rs
expression: json
---
{
  "error": {
    "code": "rate_limited",
    "message": "too many login attempts",
    "retry_after_s": 5
  }
}
