crates/courier-ftp-proto/tests/snapshots/golden__grant_request.snap
---
source: crates/courier-ftp-proto/tests/golden.rs
expression: json
---
{
  "permission": "write",
  "key_version": 2,
  "wrapped_vault_key": "MzMzMzMzMzM",
  "signature": "RERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERA"
}
