crates/courier-ftp-proto/tests/snapshots/golden__invite_accepted.snap
---
source: crates/courier-ftp-proto/tests/golden.rs
expression: json
---
{
  "org_id": "01900000-0000-7000-8000-000000000007",
  "role": "member"
}
